[package]
name = "mtdk1-srml-tcr"
version = "2.0.0"
authors = ["MTDK1"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }
runtime-io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }
support = { package = "srml-support", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }
runtime-primitives = { package = "sr-primitives", git = 'https://github.com/paritytech/substrate.git', rev = '6dc833c42ebb89a2684ed04be4689164eb59ca97', default_features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"serde",
]
no_std = []
